--- a/index.html
+++ b/index.html
@@ -4,12 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Deals</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Weekly Deals</h1>
-    <ul>
-        <li><a href="YOUR_AMAZON_AFFILIATE_LINK_1">Product 1</a> - Use code STUDENT20</li>
-        <li><a href="YOUR_AMAZON_AFFILIATE_LINK_2">Product 2</a> - Use code STUDENT15</li>
-    </ul>
+    <header>
+        <h1>Weekly Deals</h1>
+    </header>
+    <main>
+        <section class="deals">
+            <article class="deal">
+                <img src="product1.jpg" alt="Product 1">
+                <h2>Product 1</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT20</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_1" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description:</p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+            <article class="deal">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>Description: </p>
+                <p>Use code: <strong>STUDENT15</strong></p>
+                <a href="YOUR_AMAZON_AFFILIATE_LINK_2" class="button">Amazon</a>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
