--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lion Deals</title>
     <link rel="icon" sizes="60x60" href="img/Untitled.png">
     <link rel="stylesheet" href="style.css">
-</html>
+</head>  <!-- ✅ Correctly closed head tag -->
 <body>
     <header>
         <h1>Lion Deals</h1>
