--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lion Deals</title>
-    <link rel="icon" sizes="60x60" href="img/Untitled.png">
-    <link rel="stylesheet" href="style.css">
-</head>  <!-- ✅ Correctly closed head tag -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lion Deals</title>
+        <link rel="icon" sizes="60x60" href="img/Untitled.png">
+        <link rel="stylesheet" href="style.css"> <!-- Ensure this is correct -->
+    </head>    
 <body>
     <header>
         <h1>Lion Deals</h1>
