--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lion Deals</title>
         <link rel="icon" sizes="60x60" href="img/Untitled.png">
-        <link rel="stylesheet" href="style.css"> <!-- Ensure this is correct -->
+        <link rel="stylesheet" href="/style.css">
     </head>    
 <body>
     <header>
